# Numerical_Calculus

./: .gitignore  LICENSE  README.md
App/: Makefile  main.py  pyproject.toml
