[tool.poetry]
name = "numerical calculus"
version = "0.1.0"
description = "numerical calculus methods in python"
authors = ["maiaatala <ana.atala@unemat.br>"]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.11.1"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
